--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 .active-cyan-4 input[type=text]:focus:not([readonly]) {
-    border: 1px solid #4dd0e1;
-    box-shadow: 0 0 0 1px #4dd0e1;
+    border: 1px solid orange;
+    box-shadow: 0 0 0 1px orange;
     background-color: white;
 }
 
@@ -11,6 +11,10 @@
     cursor: pointer;
 }
 
+.favoritedText:hover {
+    color: #ab47bc;
+    font-weight: 700;
+}
 
 .buttonFrame {
     padding-bottom: 20px;
@@ -36,11 +40,12 @@ body {
     padding: 0px !important;
 }
 
+
 .rounded {
     text-align:center;
     font-size:48px;
     background: white;
-    border:1px solid #ccc;
+    border:1px solid orange;
 }
 
 .rightRail, .mainDiv {
@@ -58,3 +63,52 @@ body {
     height: 20px;
 }
 
+.gifCard {
+    object-fit: cover; 
+    width: 100%; 
+    height: 100%;
+}
+
+.card-action {
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+    margin-left: 0px !important;
+    margin-right: 0px !important;
+}
+
+
+.favoritedText {
+    display: inline;
+}
+
+@media screen and (max-width: 992px) {
+    img .activator {
+      height: auto;
+      height: 400px;
+    }
+    .card-image {
+        height: 400px !important;
+    }
+
+    .mainFrame {
+        flex-direction: column-reverse !important;
+        display: flex !important;
+    }
+  }
+  
+  @media screen and (min-width: 993px) {
+    .img .activator {
+      width: auto;
+      height: 260px;
+    }
+    .card-image {
+        height: 260px !important;
+        object-fit: cover !important;
+        background-size:cover;
+        background-position:center;
+    }
+    .card-content .activator {
+        width: auto;
+        height: 64px;
+    }
+  }
