--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,34 @@
+.buttonFrame {
+    background-image: linear-gradient(141deg, #ffab91 0%, orange 51%, #ff5722 85%) !important;
+    border-bottom: 2px solid white !important;
+    font-weight: 700;
+}
+
+.logo {
+    -webkit-animation: hlogo 1s infinite; /* Safari 4.0 - 8.0 */
+    animation: hlogo 1s infinite;
+}
+
+.element {
+    animation: pulse 5s infinite;
+    font-family: 'Pirata One', cursive;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 58px;
+    letter-spacing: 1.6px;
+  }
+  
+  @keyframes pulse {
+    0%, 100% {
+      color: #000;
+    }
+    50% {
+      color: #fff;
+    }
+  }
+
+
+
 .active-cyan-4 input[type=text]:focus:not([readonly]) {
     border: 1px solid orange;
     box-shadow: 0 0 0 1px orange;
@@ -5,10 +36,44 @@
 }
 
 .hover-cyan-4:hover {
-    border: 2px solid #e91e63;
-    background-color: #fce4ec;
+    border: 2px solid white;
+    background-color: white;
+    background-image: linear-gradient(141deg, #ffab91 0%, orange 51%, #ff5722 85%);
+    color: white;
     letter-spacing: 1px;
     cursor: pointer;
+    transition: .3s ease-out;
+}
+
+.pointer {
+    cursor: pointer;
+}
+
+.viewAllGifs {
+    font-weight: 700;
+    color: #4a148c;
+}
+
+.viewAllGifs:hover {
+    color: #d500f9;
+}
+
+.viewAllGifsBtn {
+    background-color: #4a148c;
+}
+
+.viewAllGifsBtn:hover {
+    background-color: #d500f9;
+}
+
+.resultsBar {
+    border: 2px solid white !important;
+    background-image: linear-gradient(141deg, #ffab91 0%, orange 51%, #ff5722 85%) !important;
+    color: white;
+}
+
+.searchButton .btn {
+    background-image: linear-gradient(141deg, #ffab91 0%, orange 51%, #ff5722 95%) !important;
 }
 
 .favoritedText:hover {
@@ -79,6 +144,10 @@ body {
 
 .favoritedText {
     display: inline;
+}
+
+.playstop {
+    opacity: .90;
 }
 
 @media screen and (max-width: 992px) {
