--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,6 +78,10 @@
     background-image: linear-gradient(141deg, #ffab91 0%, orange 51%, #ff5722 95%) !important;
 }
 
+#search_text {
+    padding-left: 10px;
+}
+
 .favoritedText:hover {
     color: #d500f9;
     font-weight: 700;
